// Copyright (c) 2018 ContentBox Authors.
// Use of this source code is governed by a MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package bpospb;


message EternalBlockMsg {
    bytes hash =1;
    int64 timestamp = 2;
    bytes signature = 3;
}